z-index fix for safari

--- a/assets/css/components/settings.less
+++ b/assets/css/components/settings.less
@@ -74,6 +74,7 @@ small{
         position: relative;
         background: @gray;
         border-radius: 20px;
+        z-index: 10;
         overflow: hidden;
         &:before{
             display: block;
