--- a/assets/css/pages/blog.less
+++ b/assets/css/pages/blog.less
@@ -95,6 +95,7 @@
                                 position: absolute;
                                 bottom: -6px;
                                 right: 0;
+                                z-index: 10;
                                 transform: translateX(50%) translateY(50%);
                                 .num{
                                     display: inline-block;
